corect static pages

--- a/deep1/main/templates/main/contacts.html
+++ b/deep1/main/templates/main/contacts.html
@@ -15,7 +15,7 @@
             <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
 
                 <p class="text">
-                    <span class="colortext" style="font-size: 20px;">Покупателям</span><br>
+                    <span class="bold" style="font-size: 20px;">Покупателям</span><br>
                     <br>Журналы можно приобрести оффлайн у наших друзей:
                 </p>
                 <ul class="text">
@@ -48,15 +48,15 @@
                     </li>
                 </ul>
                 <p class="text">
-                    <span class="colortext" style="font-size: 20px;">
+                    <span class="bold" style="font-size: 20px;">
                         Авторам и фотографам
                     </span>
                 </p>
                 <p class="text" style="display:inline">
-                    Направить ваши вопросы и материалы можно на электронную почту <span class="colortext">speleonews@yandex.ru</span> 
+                    Направить ваши вопросы и материалы можно на электронную почту <span class="bold">speleonews@yandex.ru</span> 
                     или сообщением в группу журнала во ВКонтакте:
                     <a class="dropdown-item  text-white" href="https://vk.com/speleonews" style="display:inline">
-                        <span class="colortext">vk.com/speleonews</span>
+                        <span class="card-title">vk.com/speleonews</span>
                     </a>
                 </p>
                 <p class="text">
