--- a/deep1/main/templates/main/index.html
+++ b/deep1/main/templates/main/index.html
@@ -14,7 +14,7 @@
             <!-- Контент на странице -->
             <div class="mt-5 custom-shadow rounded frame" style="background-color: white">
                 <p class="text"> 
-                    Журнал <span class="colortext">"Бездна"</span> - проект Ассоциации Спелеологов Урала (АСУ). Издается с 2006 года.
+                    Журнал <span class="bold">"Бездна"</span> - проект Ассоциации Спелеологов Урала (АСУ). Издается с 2006 года.
                     Журнал посвящен исследованиям подземных глубин и людям, исследующим пещеры.
                 </p>
                 <p class="text">
