--- a/deep1/main/templates/main/payment_delivery.html
+++ b/deep1/main/templates/main/payment_delivery.html
@@ -14,7 +14,7 @@
             <!-- Контент на странице -->
             <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
                 <p class="text">
-                    <span class="colortext" style="font-size: 20px;">
+                    <span class="bold" style="font-size: 20px;">
                         Оплата<br>
                     </span>
                 </p>
@@ -22,7 +22,7 @@
                     После оформления заказа вам на почту придет счет на оплату.
                 </p>
                 <p class="text">
-                    <span class="colortext" style="font-size: 20px;">
+                    <span class="bold" style="font-size: 20px;">
                         Доставка
                     </span>
                 </p>
