--- a/deep1/main/templates/main/work_group.html
+++ b/deep1/main/templates/main/work_group.html
@@ -14,27 +14,27 @@
             <!-- Контент на странице -->
             <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
                 <p class="text">
-                    <span class="colortext">Издатель:<br></span>
+                    <span class="bold">Издатель:<br></span>
                     Артур Асылгужин
                 </p>
                 <p class="text">
-                    <span class="colortext">Главный редактор:<br></span>
+                    <span class="bold">Главный редактор:<br></span>
                     Дина Матяева-Малышева
                 </p>
                 <p class="text">
-                    <span class="colortext">Выпускающие редакторы:<br></span>
+                    <span class="bold">Выпускающие редакторы:<br></span>
                     Анна Логинова<br>
                     Ольга Рейтер
                 </p>
                 <p class="text">
-                    <span class="colortext">Редакционная группа:<br></span>
+                    <span class="bold">Редакционная группа:<br></span>
                     Антон Прохоренко<br>
                     Алена Кибиткина<br>
                     Анна Яковлева<br>
                     Александра Николаенкова
                 </p>
                 <p class="text">
-                    <span class="colortext">Иллюстрации, отрисовка карт:<br></span>
+                    <span class="bold">Иллюстрации, отрисовка карт:<br></span>
                     Алена Кибиткина<br>
                     Оксана Шульга
                 </p>
@@ -43,19 +43,19 @@
         <div class="col-lg-5">
             <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
                 <p class="text">
-                    <span class="colortext">Дизайнер обложки:<br></span>
+                    <span class="bold">Дизайнер обложки:<br></span>
                     Надежда Елисеева
                 </p>
                 <p class="text">
-                    <span class="colortext">Корректор:<br></span>
+                    <span class="bold">Корректор:<br></span>
                     Анна Матвеева
                 </p>
                 <p class="text">
-                    <span class="colortext">Технический консультант:<br></span>
+                    <span class="bold">Технический консультант:<br></span>
                     Лариса Позднякова
                 </p>
                 <p class="text">
-                    <span class="colortext">Научные консультанты:<br></span>
+                    <span class="bold">Научные консультанты:<br></span>
                     Турбанов Илья, биология, научный сотрудник Института биологии внутренних вод им. И.Д. Папанина РАН.<br><br>
                     Иванцов Константин, геология, горный инженер геолог, научный сотрудник ФГБУ «ИМГРЭ»
                 </p>
