--- a/deep1/carts/templates/carts/includes/included_cart.html
+++ b/deep1/carts/templates/carts/includes/included_cart.html
@@ -51,7 +51,7 @@
         <h4 class="float-left"><strong> {{ carts.total_price }} руб</strong></h4>
     </div>
 </div>
-{% if carts and not orders %}
+{% if carts and not order %}
     <a class="btn btn-dark" href="{% url 'orders:create-order' %}">
         Оформить заказ
     </a>
