add privacy policy template

--- a/deep1/main/templates/main/privacy_policy.html
+++ b/deep1/main/templates/main/privacy_policy.html
@@ -1,1 +1,149 @@
-Здесь будет документ с Политикой конфиденциальности
+<!DOCTYPE html>
+{% load static %}
+<html lang="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% comment %} <link rel="stylesheet" href="{% static 'deps/css/bootstrap/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'deps/css/my_css.css' %}"> {% endcomment %}
+    <!-- Favicons для разных платформ -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'deps/favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'deps/favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'deps/favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'deps/favicon/site.webmanifest' %}">
+    <title>{{ title }} </title>
+</head>
+<style>
+	* {margin: 0; padding: 0;}
+	body {}
+	.main-page {padding: 70px 40px 0;}
+	.main-page h1 {text-align: center; text-transform: uppercase; font-size: 32px; line-height: 42px;}
+	.main-page h2 {margin: 28px 0 0 28px; text-transform: uppercase; font-size: 22px; line-height: 32px;}
+	.main-page h3 {margin: 24px 0 0 28px;}
+	.main-page h4 {margin: 24px 0 0 28px;}
+	.main-page p {margin: 15px 0 15px 28px;}
+	.main-page ul {list-style-type: none; list-style-position: outside; margin: 15px 0 0;}
+	.main-page ul li ul {margin: 0 29px;}
+	.main-page ul p {margin: 15px 0 6px 28px}
+	.main-page ul li {padding: 0 0 0 20px; position: relative; margin: 0 0 9px 28px;}
+	.main-page ul.dotted li::before {content: '\2022'; position: absolute; top: 2px; left: 0;}
+	.main-page ul.galochka li::before {content: '\1F5F8'; position: absolute; top: 0; left: 0;}
+	.main-page ul.hyphen li::before {content: '-'; position: absolute; top: 0; left: 0;}
+	.main-page .unordered li {margin: 0; padding: 0 0 0 18px; background: url('/static/pr/bgli-10x1.svg') no-repeat 0 11px}
+</style>
+<body>
+	<div class="main-page">
+        <h1>Политика конфиденциальности и обработки персональных данных интернет-магазина www.bezdna-asu.ru</h1>
+
+        <p>Настоящая Политика в отношении персональных данных интернет-магазина www.bezdna-asu.ru, 
+            (далее – Политика) принята в соответсвии с требованиями Федерального закона № 152-ФЗ “О персональных данных” 
+            и опубликована для неограниченного доступа на сайте: www.bezdna-asu.ru (далее- Сайт).</p>
+        <p>Действие настоящего документа распространяется на все случаи обработки персональных данных пользователей Сайта 
+           (далее – субъектов персональных данных), как с применением средств автоматизации, так и без применения таковых.</p>
+        <p>Используемые в настоящем документе понятия (“персональные данные”, “обработка персональных данных”, 
+           “субъект персональных данных” и т.д) толкуются согласно их определению в Федеральном законе № 152-ФЗ “О персональных данных”.</p>
+	    <p><b>Персональные данные</b> – любая информация, относящаяся к определенному или определяемому на основании такой информации физическому 
+           лицу (субъекту персональных данных), в том числе его фамилия, имя, отчество, год, месяц, дата и место рождения, адрес и другая 
+           информация.</p>
+        <p><b>Обработка персональных данных</b> – действия (операции) с персональными данными, включая сбор, систематизацию, накопление, хранение, 
+           уточнение (9обновление, изменение), использование, распространение (в том числе передачу третьим лицам, участвующим в исполнении 
+           Договора-оферты), обезличивание, блокирование, уничтожение персональных данных.</p>
+        <p><b>Субъект персональных данных</b> (далее – Субъект) – физическое лицо, которое прямо или косвенно определено или определяемо с 
+            помощью персональных данных.</p>
+
+        <h2>Области сбора персональных данных</h2>
+        
+        <ul class="dotted">
+            <p>Сбор персональных данных у пользователя сайта www.bezdna-asu.ru осуществляется:</p>
+            <li>- при оформлении заказа.</li>
+        </ul>
+
+        <h2>Личные сведения субъекта персональных данных, 
+            обрабатываемые на сайте www.bezdna-asu.ru</h2>
+
+        <ul class="dotted">
+            <p>Оформляя заказ пользователь сайта соглашается на обработку следующих персональных данных:</p>
+            <li>фамилия и имя;</li>
+            <li>номер телефона;</li>
+            <li>адрес электронной почты;</li>
+            <li>почтовый адрес места жительства пользователя;</li>
+            <li>адрес доставки товара.</li>
+        </ul>
+
+        <h2>Цели обработки персональных данных</h2>
+        <ul class="dotted">
+            <p>ИП Матяева Д.Ю., являющаяся администратором интернет-магазина www.bezdna-asu.ru и осуществляющая 
+                обработку персональных данных, самостоятельно и добровольно размещенных на сайте www.bezdna-asu.ru субъектами 
+                персональных данных, гарантирует, что полученная от Субъекта информация будет использоваться исключительно для:</p>
+            <li>индивидуального учета клиентских заказов в целях исполнения договоров с клиентами;</li>
+            <li>обработки и доставки заказов, созданных Субъектом на сайте;</li>
+            <li>повышения качества работы и оказываемых услуг;</li>
+            <li>предоставления Субъекту эффективной клиентской и технической поддержки при возникновении проблем, связанных с 
+                использованием сайта интернет-магазина;</li>
+            <li>установления с Субъектом обратной связи, включая направление уведомлений, запросов, касающихся использования 
+                сайта интернет-магазина, оказания услуг, обработка запросов и заявок, рассмотрение и разрешение проблем или вопросов.</li>
+        </ul>
+        <p>Пользователь интернет-магазина www.bezdna-asu.ru, размещая заказ на покупку товара, выражает свою волю и согласие на 
+            обработку персональных данных. В случае несогласия на обработку персональных данных, заказ, а также запрос на обратную 
+            связь пользователя не могут быть обработаны.</p>
+
+        <h2>Файлы cookie</h2>
+        <p><b>Файлы cookie</b> – это небольшие файлы, обычно состоящие из букв и цифр, загружаемые на устройство, когда пользователь 
+           обращается к определенным веб-сайтам. Файлы cookie позволяют веб-сайтам распознавать устройство пользователя.</p>
+        <p>На сайте www.bezdna-asu.ru используются сессионные куки. Сессионные куки хранятся временно в оперативной памяти компьютера 
+           и удаляются автоматически сразу после закрытия браузера.</p>
+
+        <h2>Права и обязанности оператора персональных данных</h2>
+        <ul class="dotted">
+            <p>ИП Матяева Д.Ю., являясь оператором персональных данных интернет-магазина www.bezdna-asu.ru (далее – Оператор), 
+               имеет право:</p>
+            <li>предоставлять персональные данные Субъектов третьим лицам, если это предусмотрено действующим законодательством 
+                (налоговые, правоохранительные органы и др.);</li>
+            <li>отказывать в предоставлении персональных данных в случаях предусмотренных законодательством;</li>
+            <li>использовать персональные данные Субъекта без его согласия, в случаях предусмотренных законодательством;</li>
+            <li>передавать персональные данные третьим лицам, в частности, курьерским службам, организациям почтовой связи, 
+                исключительно для целей обработки и пересылки заказов, созданных на Сайте субъектом персональной информации.</li>
+        </ul>
+        <p>В остальных случаях в отношении персональной информации Субъекта, сохраняется конфиденциальность, кроме случаев 
+           добровольного предоставления пользователем информации о себе для общего доступа неограниченному кругу лиц.<p>
+
+        <h2>Гарантии Оператора по защите персональных данных Субъекта</h2>
+        <p>ИП Матяева Д.Ю. гарантирует организационные и технические меры для защиты персональной информации пользователя от 
+           неправомерного или случайного доступа, уничтожения, изменения, блокирования, копирования, распространения, 
+           а также от иных неправомерных действий с ней третьих лиц в соответствии с требованиями Конституции Российской Федерации,
+            Федерального закона № 152-ФЗ “О персональных данных”, подзаконных актов, других определяющих случаи и особенности 
+            обработки персональных данных федеральных законов Российской Федерации, руководящих и методических документов ФСТЭК 
+            России и ФСБ России.</p>
+
+        <h2>Права и обязанности субъекта персональных данных</h2>
+        <ul class="dotted">
+            <p>Субъект персональных данный имеет право:</p>
+            <li>требовать уточнения своих персональных данных, их блокирования или уничтожения в случае, 
+                если персональные данные являются неполными, устаревшими, недостоверными, незаконно полученными или 
+                не являются необходимыми для заявленной цели обработки, а также принимать предусмотренные законом меры 
+                по защите своих прав;</li>
+            <li>требовать перечень своих персональных данных, обрабатываемых Оператором и источник их получения;</li>
+            <li>получать информацию о сроках обработки своих персональных данных, в том числе о сроках хранения;</li>
+            <li>требовать извещения всех лиц, которым ранее были сообщены неверные или неполные его персональные данные, 
+                обо всех произведенных в них исключениях, исправлениях или дополнениях;</li>
+            <li>обжаловать в уполномоченный орган по защите прав субъектов персональных данных или в судебном порядке 
+                неправомерные действия или бездействия при обработке его персональных данных;</li>
+            <li>на защиту прав и законных интересов, в том числе на возмещение убытков и (или) компенсацию 
+                морального вреда в судебном порядке.</li>
+        </ul>
+
+        <h2>Заключительные положения</h2>
+        <p>Настоящая Политика подлежит изменению, дополнению в случае появления новых законодательных актов и специальных 
+           нормативных документов по обработке и защите персональных данных.</p>
+        <p>Настоящая Политика является внутренним документом интернет-магазина www.bezdna-asu.ru и доступна для просмотра 
+           неограниченным кругом лиц на официальном сайте магазина.</p>
+        <p>ИП Матяева Д.Ю. оставляет за собой право вносить без согласия Субъекта любые изменения в Политику с целью 
+           дальнейшего совершенствования системы защиты от несанкционированного доступа к сообщаемым Субъектами персональным данным.</p>
+        <p>При внесении существенных изменений в Политику в отношении обработки персональных данных, на сайте www.bezdna-asu.ru 
+           размещается обновленная Политика.</p>
+    </div>
+</body>
+   
+</html>
