--- a/deep1/templates/404.html
+++ b/deep1/templates/404.html
@@ -12,10 +12,11 @@
     <!-- Стиль footer-a для главной страницы -->
     <link rel="stylesheet" href="{% static 'deps/css/my_footer_css.css' %}">
     <!-- Favicons для разных платформ -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'deps/favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'deps/favicon/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'deps/favicon/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'deps/favicon/site.webmanifest' %}">
+    <link rel="icon" href="{% static 'deps/favicon/favicon.ico' %}" type="image">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <title>{{ title }} </title>
 </head>
 
