frontend and order app changes

--- a/deep1/main/templates/main/contacts.html
+++ b/deep1/main/templates/main/contacts.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-lg-10">
             <!-- Контент на странице -->
-            <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
+            <div class="mt-2 custom-shadow rounded frame">
 
                 <p class="text">
                     <span class="bold" style="font-size: 20px;">Покупателям</span><br>
@@ -41,10 +41,7 @@
                         <p style="display:inline">, г. Москва, ул. Сайкина, 17</p>
                     </li>
                     <li>
-                        <a class="dropdown-item  text-white" href="https://www.krascp.ru/" style="display:inline">
-                            <span class="colortext">«Центр путешественников»</span>
-                        </a>
-                        <p style="display:inline">, г. Красноярск, ул. Карла Маркса, 49</p>
+                        «Центр путешественников», г. Красноярск, ул. Карла Маркса, 49
                     </li>
                 </ul>
                 <p class="text">
