--- a/deep1/main/templates/main/index.html
+++ b/deep1/main/templates/main/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-lg-10">
             <!-- Контент на странице -->
-            <div class="mt-5 custom-shadow rounded frame" style="background-color: white">
+            <div class="mt-5 custom-shadow rounded frame">
                 <p class="text"> 
                     Журнал <span class="bold">"Бездна"</span> - проект Ассоциации Спелеологов Урала (АСУ). Издается с 2006 года.
                     Журнал посвящен исследованиям подземных глубин и людям, исследующим пещеры.
@@ -20,7 +20,7 @@
                 <p class="text">
                     Здесь вы найдете последние новости спелеомира России об открытиях и находках в пещерах,
                     истории исследований и интересную статистику, анонсы соревнований и дистанции с них,
-                    а так же материалы о новейших технических решениях или экспериментах в пещерах.
+                    а также материалы о новейших технических решениях или экспериментах в пещерах.
                 </p>
                 <p class="text">
                     Наша цель - рассказывать о спелеологии на Урале и в стране.
