--- a/deep1/main/templates/main/work_group.html
+++ b/deep1/main/templates/main/work_group.html
@@ -10,9 +10,9 @@
         <div class="col-lg-2">
             <!-- Пустой блок на Ваше усмотрение -->
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-10">
             <!-- Контент на странице -->
-            <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
+            <div class="col-lg-5 mt-2 custom-shadow rounded frame">
                 <p class="text">
                     <span class="bold">Издатель:<br></span>
                     Артур Асылгужин
@@ -38,10 +38,6 @@
                     Алена Кибиткина<br>
                     Оксана Шульга
                 </p>
-            </div>
-        </div>
-        <div class="col-lg-5">
-            <div class="mt-2 custom-shadow rounded frame" style="background-color: white">
                 <p class="text">
                     <span class="bold">Дизайнер обложки:<br></span>
                     Надежда Елисеева
@@ -61,6 +57,27 @@
                 </p>
             </div>
         </div>
+        {% comment %} <div class="col-lg-5">
+            <div class="mt-2 custom-shadow rounded frame">
+                <p class="text">
+                    <span class="bold">Дизайнер обложки:<br></span>
+                    Надежда Елисеева
+                </p>
+                <p class="text">
+                    <span class="bold">Корректор:<br></span>
+                    Анна Матвеева
+                </p>
+                <p class="text">
+                    <span class="bold">Технический консультант:<br></span>
+                    Лариса Позднякова
+                </p>
+                <p class="text">
+                    <span class="bold">Научные консультанты:<br></span>
+                    Турбанов Илья, биология, научный сотрудник Института биологии внутренних вод им. И.Д. Папанина РАН.<br><br>
+                    Иванцов Константин, геология, горный инженер геолог, научный сотрудник ФГБУ «ИМГРЭ»
+                </p>
+            </div>
+        </div> {% endcomment %}
     </div>
 {% endblock %}
 {% block footer %}
