--- a/deep1/templates/base.html
+++ b/deep1/templates/base.html
@@ -22,8 +22,8 @@
 
 <body>
     {% include "includes/header.html" %}
-    <section>
-        <div class="container">
+    <main>
+        {% comment %} <div class="container">
             <!-- Каталог и корзина с фиксированным расположением на странице -->
             <div class="row mt-1 position-fixed z-3">
                 <!-- Каталог -->
@@ -45,13 +45,13 @@
                 {% block modal_cart %}{% endblock %}
                 <!-- Закончилась разметка модального окна -->
             </div>
-        </div>
+        </div> {% endcomment %}
         <!-- Контент -->
         <div class="container">
             {% include "includes/notifications.html" %}
             {% block content %}{% endblock %}
         </div>
-    </section>
+    </main>
     {% block footer %}{% endblock %}
     <script src="{% static 'deps/js/jquery/jquery-3.7.0.min.js' %}"></script>
     <script src="{% static 'deps/js/jquery-ajax.js' %}"></script>
