--- a/deep1/templates/includes/header.html
+++ b/deep1/templates/includes/header.html
@@ -1,4 +1,5 @@
-{% load static %}    
+{% load static %}
+{% load goods_tags %}    
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black" data-bs-theme="dark">
             <div class="container">
@@ -11,6 +12,21 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link  text-white" href="{% url 'main:index' %}">Главная</a>
+                        </li>
+                        <li class="nav-item dropdown ">
+                            <a class="nav-link dropdown-toggle text-white" href="" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Каталог
+                            </a>
+                            <ul class="dropdown-menu">
+                                {% tag_categories as categories %}
+                                {% for category in categories %}
+                                    <li><a class="dropdown-item text-white" href="{% url 'catalog:index' category.slug %}">{{ category.name }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </li>
                         <li class="nav-item dropdown ">
                             <a class="nav-link dropdown-toggle text-white" href="" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -28,12 +44,12 @@
                     </ul>
                 </div>
             </div>
-            <a class="navbar-brand" href="https://vk.com/speleonews"><img src="{% static 'deps/icons/vk.png' %}" width="50" 
-                height="50" border="0"></a>
-            <a class="navbar-brand" href="https://t.me/bezdnaASU"><img src="{% static 'deps/icons/telegram.png' %}" width="50" 
-                height="50" border="0"></a>
+            <a class="navbar-brand" href="https://vk.com/speleonews"><img src="{% static 'deps/icons/vk.png' %}" width="40" 
+                height="40" border="0"></a>
+            <a class="navbar-brand" href="https://t.me/bezdnaASU"><img src="{% static 'deps/icons/telegram.png' %}" width="40" 
+                height="40" border="0"></a>
             <a class="navbar-brand" href="https://vk.com/speleoural">
-                <img src="{% static 'deps/images/ASU.png' %}" style="width:190px;height:100px;">
+                <img src="{% static 'deps/images/ASU.png' %}" style="width:150px;height:80px;">
             </a>
         </nav>
     </header>
