--- a/deep1/orders/templates/orders/create_order.html
+++ b/deep1/orders/templates/orders/create_order.html
@@ -25,16 +25,6 @@
                 <div class="card mb-3">
                 <div class="card-body">
 
-                    {% comment %} <form action="{% url 'orders:create-order' %}" method="post">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <input type='checkbox'
-                            onchange="document.getElementById('button1').disabled = !this.checked"/>
-                            Нажимая на кнопку я даю свое согласие на обработку персональных данный
-                            и соглашаюсь с условиями <a href="{% url 'main:privacy-policy' %}">политики конфиденциальности</a><br><br>
-                        <button id="button1" type="submit" class="btn btn-dark" disabled>Оформить заказ</button>
-                    </form> {% endcomment %}
-                    
                     <form action="{% url 'orders:create-order' %}" method="post">
                         {% csrf_token %}
                         <div class="row">
@@ -82,8 +72,92 @@
                                 <div class="alert alert-danger alert-dismissible fade show">{{form.email.errors}}</div>
                             {% endif %}
                         </div>
-                        
+                         
                         <div class="col-md-12 mb-3">
+                            <label for="delivery" class="form-label">Способ доставки: </label>
+                            <div class="form-check form-check-inline">
+                                <input id="id_requires_delivery" class="form-check-input" type="radio"
+                                name="requires_deliverys" value="requires_delivery" checked/>
+                                <label for="id_requires_delivery">Нужна доставка</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input id="id_pickup" class="form-check-input" type="radio" name="requires_deliverys" value="pickup" />
+                                <label for="id_pickup">Самовывоз</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input id="id_send_to_email" class="form-check-input" type="radio" name="requires_deliverys" value="send_to_email" />
+                                <label for="id_send_to_email">Выслать на электронную почту</label>
+                            </div>
+                        </div>
+
+                        <div id="requires_delivery" class="radio-blocks" style="display:none">
+                            <label for="id_delivery_type" class="form-label">
+                                Выберите вариант доставки:
+                            </label>
+                            <select name="delivery_type" id="id_delivery_type">
+                                <option value="-">-</option>
+                                <option value="Яндекс доставка">Яндекс доставка</option>
+                                <option value="Почта">Почта</option>
+                            </select>
+                            {% if form.delivery_type.errors %}
+                                <div class="alert alert-danger alert-dismissible fade show">
+                                    {{form.delivery_type.errors}}
+                                </div>
+                            {% endif %}
+                            <br>
+                            <label for="id_delivery_address" class="form-label">
+                                Адрес доставки*:
+                            </label>
+                            <textarea class="form-control" id="id_delivery_address"
+                            value="{% if form.delivery_address.value %}{{ form.delivery_address.value }}{% endif %}"
+                                name="delivery_address" rows="2"></textarea>
+                            {% if form.delivery_address.errors %}
+                                <div class="alert alert-danger alert-dismissible fade show">
+                                    {{form.delivery_address.errors}}
+                                </div>
+                            {% endif %}
+                        </div>
+
+                        <div id="pickup" class="radio-blocks" style="display:none">
+                            <label for="id_pickup_place" class="form-label">
+                                Выберите пункт самовывоза:
+                            </label>
+                            <select name="pickup_place" id="id_pickup_place">
+                                <option value="-">-</option>
+                                <option value="«Посольство Уральских гор»">«Посольство Уральских гор», г. Уфа, ул. Мустая Карима, 44</option>
+                                <option value="«Территория странствий»">«Территория странствий», г. Москва, ул. Сайкина, 17</option>
+                                <option value="«Центр путешественников»">«Центр путешественников», г. Красноярск, ул. Карла Маркса, 49</option>
+                                <option value="Клуб СГС'">Клуб СГС, Екатеринбург, ул. Вишневая, 46</option>
+                                <option value="Магазин SportX">Магазин SportX, Екатеринбург, ул. Советская, 16</option>
+                                <option value="Пермский спелеоклуб">Пермский спелеоклуб, Пермь, ул. Уральская, 114</option>
+                                <option value="«Земля приключений»">«Земля приключений», Оренбург, ул. Максима Горького, 22</option>
+                                <option value="«Вертикаль»">Магазин «Вертикаль», Симферополь, бульвар Ленина, 14/2</option>
+                                <option value="«Геккон»">Магазин «Геккон», Ялта, ул. Московская, 8а</option>
+                            </select>
+                            {% if form.pickup_place.errors %}
+                                <div class="alert alert-danger alert-dismissible fade show">
+                                    {{form.pickup_place.errors}}
+                                </div>
+                            {% endif %}
+                        </div>
+
+                        {% comment %} <div id="send_to_email" class="radio-blocks" style="display:none">
+                            <label class="form-label">
+                                Выслыть на указанную почту:
+                            </label>
+                            <select name="send_to_email">
+                                <option value="-">-</option>
+                                <option value="«Да»">Да</option>
+                            </select>
+                            {% if form.send_to_email.errors %}
+                                <div class="alert alert-danger alert-dismissible fade show">
+                                    {{form.send_to_email.errors}}
+                                </div>
+                            {% endif %}
+                        </div> {% endcomment %}
+
+                                              
+                        {% comment %} <div class="col-md-12 mb-3">
                             <label for="delivery" class="form-label">Способ доставки: </label>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="requires_delivery"
@@ -99,7 +173,7 @@
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="requires_delivery"
                                     id="id_send_to_email" value="2">
-                                <label class="form-check-label" for="id_send_to_email">Выслать на электронную почту</label>
+                                <label class="form-check-label" for="id_send_to_email">Выслать на электронную почту</label> 
                             </div>
                         </div>
                     
@@ -163,7 +237,7 @@
                                         {{form.send_to_email.errors}}
                                     </div>
                                 {% endif %}
-                            </div>
+                            </div>  {% endcomment %}
 
                     </div>
                     
