--- a/deep1/static/deps/css/my_css.css
+++ b/deep1/static/deps/css/my_css.css
@@ -5,6 +5,22 @@ body {
   background-position: center center;
   background-size: cover;
   height: 100%;
+  overflow-y: auto;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main { 
+  flex: 1;
+  margin-top: 50px;
+  padding-bottom: 100px;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .dropdown-toggle::after {
@@ -41,20 +57,22 @@ body {
   padding-left:20px;
   padding-top:20px;
   padding-right:10px;
-  padding-bottom:15px
+  padding-bottom:15px;
+  background-color: black;
+  opacity: 0.75;
 }
 
 .text {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 18px;
-  color: black;
+  color: white;
   padding-top:2px;
   padding-bottom:2px
 }
 
 .colortext {
   font-size: 18px;
-  color: #0044ff;
+  color: red;
 }
 
 input + button {
