--- a/deep1/templates/base.html
+++ b/deep1/templates/base.html
@@ -53,7 +53,9 @@
         </div>
     </main>
     {% block footer %}{% endblock %}
+    <link href="{% static 'deps/js/bxslider/jquery.bxslider.css' %}" rel="stylesheet">
     <script src="{% static 'deps/js/jquery/jquery-3.7.0.min.js' %}"></script>
+    <script src="{% static 'deps/js/bxslider/jquery.bxslider.min.js' %}"></script>
     <script src="{% static 'deps/js/jquery-ajax.js' %}"></script>
     <script src="{% static 'deps/js/bootstrap/bootstrap.bundle.min.js' %}"></script>
 </body>
